# spume

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml  nightly-contract.yml
applications/libs/spumeFoamSolvers/: spumePCG.C  spumePCG.H
applications/libs/spumeFoamSolvers/Make/: files  options
applications/spumePimpleFoam/: spumePimpleFoam.C
applications/spumePimpleFoam/Make/: files  options
bench/: CMakeLists.txt  checkasm.hpp  main.cpp  perf_counters.hpp
docs/: hardware.md  m2-progress.md  milestone0.md  milestone1.md  perf-strix-halo.md  roadmap.md
docs/adr/: 0000-template.md  0001-fork-topology.md  0002-mixed-precision.md  0003-jit-first.md  0004-gpu-execution-model.md  0005-no-fpga.md  0006-license.md  0007-naming.md  0008-upstream-strategy.md  0009-metal-backend.md  0010-explicit-engines.md  0011-commit-authorship.md  0012-test-framework.md  0013-bench-evidence-non-lab.md  0014-upstream-baseline-v2606.md  0015-local-strix-halo-perf-reference.md  0016-inline-asm-pluggable-backends.md  0017-gpu-backend-hip-unified-memory.md  README.md
docs/superpowers/plans/: 2026-07-19-finish-m1.md  2026-07-19-m2a-solver-seam.md
docs/superpowers/specs/: 2026-07-19-finish-m1-design.md  2026-07-19-m2a-solver-seam-design.md  2026-07-19-m2b-mixed-precision-precond-design.md
patches/: README.md
scripts/: apply_patches.sh  bootstrap_openfoam.sh  check_format.sh  check_patch_budget.sh  check_spdx.sh  foam-env.sh  install_gpu_tooling.sh  make_unstructured_fixture.py
src/backends/: README.md
src/backends/gpu/: CMakeLists.txt  README.md  cheb_check.cpp  fcg_check.cpp  gpu_cheb.hip.cpp  gpu_cheb.hpp  gpu_fcg.hip.cpp  gpu_fcg.hpp  gpu_reduce.hip.cpp  gpu_reduce.hpp  gpu_spmv.hip.cpp  gpu_spmv.hpp  gpu_transfer.hip.cpp  gpu_transfer.hpp  gpu_vcycle.hip.cpp  gpu_vcycle.hpp  kcycle_check.cpp  reduce_check.cpp  spmv_check.cpp  spmv_pmc.cpp  transfer_check.cpp  vcycle_check.cpp
src/bridge/: CMakeLists.txt  ldu_to_sell.cpp  ldu_to_sell.hpp
src/compat/: README.md  foam.hpp  ldu.hpp  pimple.hpp
src/core/: CMakeLists.txt  amg.cpp  amg.hpp  amg_precond.hpp  equilibrate.hpp  formats.cpp  formats.hpp  fused_spmv.hpp  poisson.cpp  poisson.hpp  precond.hpp  reduce.cpp  reduce.hpp  reorder.cpp  reorder.hpp  sell.cpp  sell.hpp  solver.cpp  solver.hpp  spmv.hpp  types.hpp  vecops.hpp  version.cpp  version.hpp
tests/: CMakeLists.txt
tests/contract/: CMakeLists.txt  README.md  check_bands.py  run_contract_cavity.sh
tests/contract/cases/cavity/0/: U  p
tests/contract/cases/cavity/constant/: transportProperties
tests/contract/cases/cavity/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
tests/contract/expected/: cavity.bands
tests/contract/src/spumeContractLdu/: spumeContractLdu.C
tests/contract/src/spumeContractLdu/Make/: files  options
tests/data/: unstructured_rgg.mtx
tests/mms/: README.md
tests/regression/: CMakeLists.txt  check_equivalence.py  run_equivalence_pimple.sh  run_solver_comparison.sh  run_spumepcg_equivalence.sh  test_check_equivalence.py  test_determinism.cpp  test_mixed_precision.cpp
tests/regression/cases/TJunction-pimple/0/: U  epsilon  k  nuTilda  nut  p  s
tests/regression/cases/TJunction-pimple/constant/: turbulenceProperties
tests/regression/cases/TJunction-pimple/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
tests/regression/cases/pitzDaily-pimple/0/: U  epsilon  k  nuTilda  nut  p
tests/regression/cases/pitzDaily-pimple/constant/: transportProperties
tests/regression/cases/pitzDaily-pimple/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
tests/support/: doctest_main.cpp  mm_io.hpp
tests/unit/: CMakeLists.txt  test_amg.cpp  test_amg_precond.cpp  test_equilibrate.cpp  test_formats.cpp  test_fused_spmv.cpp  test_ldu_to_sell.cpp  test_poisson.cpp  test_reduce.cpp  test_reorder.cpp  test_sanity.cpp  test_solvers.cpp
